<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search" android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_cart"
        android:title="@string/menu_cart" android:icon="@drawable/ic_shopping_cart" app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_revenue"
        android:title="@string/menu_revenue" app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_asc"
        android:title="@string/menu_sort_asc" app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_desc"
        android:title="@string/menu_sort_desc" app:showAsAction="never" />

</menu>